--- a/DatabaseSearcher.App/DatabaseSearcher.App.csproj
+++ b/DatabaseSearcher.App/DatabaseSearcher.App.csproj
@@ -9,6 +9,14 @@
     <AssemblyVersion>1.1.0.0</AssemblyVersion>
     <FileVersion>1.1.0.0</FileVersion>
   </PropertyGroup>
+	<PropertyGroup>
+		<PublishSingleFile>true</PublishSingleFile>
+		<SelfContained>true</SelfContained>
+		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
+		<DebugType>embedded</DebugType>
+		<EnableCompressionInSingleFile>true</EnableCompressionInSingleFile>
+		<IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
+	</PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SQLServerSearcher\SQLServerSearcher.csproj" />
